--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -28,7 +28,12 @@
     <section class="menu">
 
       <nav>
-        <a class="{{el.class}}" *ngFor="let el of dashboardMenu" [routerLinkActiveOptions]="{exact: true}" [routerLink]="el.link | localize" [routerLinkActive]="'active'"><span>{{ el.title }}</span></a>
+        <a class="{{el.class}}" *ngFor="let el of dashboardMenu"
+        [routerLinkActiveOptions]="{exact: true}"
+        [routerLink]="el.link | localize"
+        [routerLinkActive]="'active'"
+        (click)="openChat(el.class)"
+        [ngClass]="{ 'newMessage': newMessage }"><span>{{ el.title }}</span></a>
 
       </nav>
     </section>
