--- a/src/app/chat/components/messager/messager.component.html
+++ b/src/app/chat/components/messager/messager.component.html
@@ -13,12 +13,12 @@
     </div>
     <form #message="ngForm" (ngSubmit)="sendMessage(message)" class="message-input">
       <div class="text-input">
-        <textarea name="messageText" [ngModel]="messageText" #textinput  id="message" placeholder="Сообщение"
+        <textarea name="messageText" [ngModel]="messageText" #textarea  id="message" placeholder="Сообщение"
           (keydown)="triggerFunction($event, message)" ></textarea>
       </div>
       <div class="tools">
-        <div>
-          <app-emoji *ngIf="textinput"  [textinput]="textinput"></app-emoji>
+        <div >
+          <app-emoji [textinput]="textinput"></app-emoji>
           <div class="file" (click)="openFilesUploader()">
             <!-- <app-upload-file></app-upload-file> -->
             <!-- <label class="add-file" for="add-file"></label>
