--- a/src/app/chat/components/upload-file/upload-file.component.html
+++ b/src/app/chat/components/upload-file/upload-file.component.html
@@ -2,12 +2,36 @@
   <span class="close" (click)="closeWindow()"></span>
   <div class="inform">
     <div class="img"></div>
-    <h6>Загрузите файлы</h6>
+    <div>
+       <h6>Загрузите файлы</h6>
     <p>Перетащите сюда файл</p>
+    </div>
+
   </div>
-  <div class="file-input"></div>
+  <div class="file-input">
+    <div class="dr-dp" appDragDrop (onFileDropped)="fileProgress($event)">
+      <div class="upload"></div>
+      <span>.JPG .PNG .GIF </span>
+      <span>Перетащите файлы или </span>
+      <input type="file" id="file" multiple="true" class="input-file" #fileInput
+        (change)="fileProgress($event.target.files)" />
+      <label for="file">кликните сюда</label>
+    </div>
+  </div>
+  <div class="files-list" *ngIf="files">
+    <div class="file" *ngFor="let file of files">
+      <div class="file-img">
+        <img src="/assets/images/icons/files-type/{{ file.fileType | fileType }}.png" alt="">
+      </div>
+      <div class="file-info">
+        <p class="name">{{ file.fileName }}</p>
+        <p class="size">{{ file.size | fileSize }}</p>
+        <span class="delete"></span>
+      </div>
+    </div>
+  </div>
   <div class="files-btn">
     <button class="btn-sec"><span>Отмена</span></button>
-    <button class="btn"> <span>Загрузить</span></button>
+    <button class="btn" (click)="sentMessage()"> <span>Загрузить</span></button>
   </div>
 </div>
