--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,5 @@
 <header>
 <app-main-header></app-main-header>
 </header>
-<!-- <app-chat [chatType]="'classic'"></app-chat> -->
+<br><br><br><br><br><br><br>
+<h1>Page in development</h1>
