--- a/src/app/user-page/user-page-services/user-page-services.component.scss
+++ b/src/app/user-page/user-page-services/user-page-services.component.scss
@@ -6,6 +6,7 @@
 }
 .user-services {
   border-bottom: 1px solid #f1f2f4;
+  margin-bottom: 25px;
   .cards-list {
     display: flex;
     flex-wrap: wrap;
@@ -155,7 +156,7 @@
 }
 
 .show-offers{
-  margin: 0 auto 15px;
+  margin: 0 auto 25px;
   font-family: Source Sans Pro;
   font-style: normal;
   font-weight: 600;
