--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -152,6 +152,9 @@
     </section>
     <app-user-page-services *ngIf="userData" [userData] = userData></app-user-page-services>
     <app-user-page-comments *ngIf="userData" [userData] = userData></app-user-page-comments>
+    <div class="back-to-list">
+      <a>Вернуться к списку фрилансеров</a>
+    </div>
   </div>
 </div>
 
