--- a/src/app/chat/components/message-list/message-list.component.scss
+++ b/src/app/chat/components/message-list/message-list.component.scss
@@ -3,12 +3,74 @@
   padding: 30px 0 0 28px;
   height: 100%;
   overflow: hidden;
+  position: relative;
   .message-list {
     height: 100%;
     overflow-y: auto;
     & > div {
       padding-right: 28px;
     }
+  }
+  .scroll-down {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: transparent;
+    right: 50px;
+    bottom: 50px;
+    cursor: pointer;
+    &:before {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      content: "\e915";
+      font-family: icomoon;
+      color: #fff;
+      font-size: 10px;
+      top: 50%;
+      left: 50%;
+      background: #3c7eea;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      text-align: center;
+      line-height: 34px;
+      z-index: 10;
+    }
+    &:after {
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 100%;
+      background: #3c7eea;
+      opacity: 0.5;
+      z-index: -1;
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
+      animation: btnAnimation 2.2s infinite;
+      z-index: 2;
+
+    }
+  }
+
+  .more-messages {
+    width: 100px;
+    height: 50px;
+    background-color: #000;
+    border-radius: 61px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+// Btn Animation
+@keyframes btnAnimation {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.4);
   }
 }
 
@@ -17,7 +79,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  .text, .files {
+  .text {
     background-color: #e6e9ff;
     padding: 14px 24px;
     border-radius: 0px 15px 15px 15px;
@@ -56,56 +118,114 @@
       margin-left: 20px;
       margin-right: 0;
     }
-    .text, .files {
+    .text {
       background-color: #eae8ed;
       border-radius: 15px 0px 15px 15px;
-
-    }
-    .files {
-      flex-direction: row-reverse;
     }
     .time {
       margin: 0 20px 0 50px;
     }
   }
-}
-.files {
-  display: flex;
-  flex-direction: column;
-}
 
-.file {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 25px;
-  min-width: 280px;
-  &:hover {
-    span {
-      color: #1666ea;
+  .files {
+    background: #ffffff;
+    box-shadow: 0px 9px 21px rgba(128, 152, 213, 0.1);
+    border-radius: 8px;
+    display: flex;
+    padding: 14px 24px;
+    flex-direction: column;
+    box-sizing: border-box;
+    // justify-content: space-between;
+    // margin-bottom: 25px;
+
+    .file {
+      display: flex;
+      justify-content: space-between;
+      box-sizing: border-box;
+      align-items: center;
+      // min-width: 280px;
+      img {
+        width: 31px;
+        height: auto;
+        max-height: 35px;
+        margin-right: 10px;
+      }
+      &:not(:last-of-type) {
+        margin-bottom: 25px;
+      }
+      .name {
+        width: 100%;
+        font-family: Source Sans Pro, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+        color: #323c47;
+        margin-right: 16px;
+      }
+    }
+    &:hover {
+      span {
+        color: #1666ea;
+        cursor: pointer;
+      }
+    }
+    a {
+      text-decoration: none;
+      color: #bfc5d1;
+      width: 20px;
+      height: 20px;
+    }
+    .download {
+      position: relative;
+      width: 20px;
+      &:before {
+        position: absolute;
+        content: "\e913";
+        font-family: "icomoon";
+        left: 50%;
+        transform: translateX(-50%);
+      }
+      &:hover:before {
+        color: #1666ea;
+      }
       cursor: pointer;
     }
-
-  }
-  span {
-    color: #323c47;
-    font-family: "Source Sans Pro";
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-    display: block;
-  }
-  .download {
-    position: relative;
-    &:before {
-      position: absolute;
-      content: '\e913';
-      font-family: "icomoon";
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    &:hover:before {
-      color: #1666ea;
-    }
-    cursor: pointer;
   }
 }
+
+// .file {
+//   display: flex;
+//   justify-content: space-between;
+//   margin-bottom: 25px;
+//   min-width: 280px;
+//   &:hover {
+//     span {
+//       color: #1666ea;
+//       cursor: pointer;
+//     }
+
+//   }
+//   span {
+//     color: #323c47;
+//     font-family: "Source Sans Pro";
+//     font-size: 14px;
+//     font-weight: 400;
+//     line-height: 18px;
+//     display: block;
+//   }
+//   .download {
+//     position: relative;
+//     &:before {
+//       position: absolute;
+//       content: '\e913';
+//       font-family: "icomoon";
+//       left: 50%;
+//       transform: translateX(-50%);
+//     }
+//     &:hover:before {
+//       color: #1666ea;
+//     }
+//     cursor: pointer;
+//   }
+// }
