--- a/src/assets/icoMoon/style.css
+++ b/src/assets/icoMoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?kuwcpb');
-  src:  url('fonts/icomoon.eot?kuwcpb#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?kuwcpb') format('truetype'),
-    url('fonts/icomoon.woff?kuwcpb') format('woff'),
-    url('fonts/icomoon.svg?kuwcpb#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?33wkh3');
+  src:  url('fonts/icomoon.eot?33wkh3#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?33wkh3') format('truetype'),
+    url('fonts/icomoon.woff?33wkh3') format('woff'),
+    url('fonts/icomoon.svg?33wkh3#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-Mask:before {
+  content: "\e915";
+}
 .icon-download-file:before {
   content: "\e913";
   color: #a6a7a8;
