--- a/src/app/chat/components/upload-file/upload-file.component.html
+++ b/src/app/chat/components/upload-file/upload-file.component.html
@@ -24,7 +24,7 @@
         <img src="/assets/images/icons/files-type/{{ file.fileType | fileType }}.png" alt="">
       </div>
       <div class="file-info">
-        <p class="name">{{ file.fileName }}</p>
+        <p class="name">{{ file.filename }}</p>
         <p class="size">{{ file.size | fileSize }}</p>
         <span class="delete"></span>
       </div>
