--- a/src/app/chat/components/message-list/message-list.component.scss
+++ b/src/app/chat/components/message-list/message-list.component.scss
@@ -54,13 +54,22 @@
   }
 
   .more-messages {
-    width: 100px;
+    width: 200px;
     height: 50px;
-    background-color: #000;
+    background-color: rgb(192, 191, 191);
     border-radius: 61px;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    cursor: pointer;
+    color: #fff;
+    text-align: center;
+    line-height: 50px;
+    font-size: 13px;
+    cursor: pointer;
+    &:hover {
+      background-color: rgb(158, 154, 154);
+    }
   }
 }
 
