--- a/src/app/user-page/user-page-services/user-page-services.component.html
+++ b/src/app/user-page/user-page-services/user-page-services.component.html
@@ -6,15 +6,15 @@
 
         <div class="card-preview__bg" (click)="openOffer(offer.id)">
           <img class="card-preview" (click)="openOffer(offer.id)"
-            [src]="'https://www.thecubetest.site/Backend/storage/app/' + offer.mainImage">
+            [src]="offer.mainImage">
         </div>
         <div class="card-description">
 
-          <p class="card-description__about" (click)="openOffer(offer.id)">нужно запросить NAME {{offer.description}}
+          <p class="card-description__about" (click)="openOffer(offer.id)">{{offer.title}}
           </p>
           <div class="card-description__bottom">
             <!-- <div class="card-description__level">{{userData.raiting}}</div> -->
-            <div class="card-description__level">нужно запросить</div>
+            <div class="card-description__level">{{offer.raiting}}</div>
             <div class="card-description__comments">({{offer.comments_count}} отзывов)</div>
           </div>
 
@@ -31,116 +31,4 @@
 
   </div>
   <p class="show-offers" (click)=showAllOffers() [ngClass] = "{open: offersShowState}">показать больше</p>
-  <!-- <div class="cards-list">
-    <div class="card">
-      <div class="card-preview__bg">
-        <img class="card-preview" src="assets\images\images\opponent.jpg">
-      </div>
-      <div class="card-description">
-
-        <p class="card-description__about">Дизайн мобильных приложений, мобильный ада...</p>
-        <div class="card-description__bottom">
-          <div class="card-description__level">5</div>
-          <div class="card-description__comments"><a>(320 отзывов)</a></div>
-        </div>
-
-      </div>
-      <div class="card-bottom">
-        <div class="card-bottom__like"></div>
-        <div class="card-bottom__price">
-          от
-          <span>30 000</span>
-        </div>
-      </div>
-
-    </div>
-    <div class="card">
-      <div class="card-preview__bg">
-        <img class="card-preview" src="assets\images\images\opponent.jpg">
-      </div>
-      <div class="card-description">
-
-        <p class="card-description__about">Дизайн мобильных приложений, мобильный ада...</p>
-        <div class="card-description__bottom">
-          <div class="card-description__level">5</div>
-          <div class="card-description__comments"><a>(320 отзывов)</a></div>
-        </div>
-
-      </div>
-      <div class="card-bottom">
-        <div class="card-bottom__like"></div>
-        <div class="card-bottom__price">
-          от
-          <span>30 000</span>
-        </div>
-      </div>
-
-    </div>
-    <div class="card">
-      <div class="card-preview__bg">
-        <img class="card-preview" src="assets\images\images\opponent.jpg">
-      </div>
-      <div class="card-description">
-
-        <p class="card-description__about">Дизайн мобильных приложений, мобильный ада...</p>
-        <div class="card-description__bottom">
-          <div class="card-description__level">5</div>
-          <div class="card-description__comments"><a>(320 отзывов)</a></div>
-        </div>
-
-      </div>
-      <div class="card-bottom">
-        <div class="card-bottom__like"></div>
-        <div class="card-bottom__price">
-          от
-          <span>30 000</span>
-        </div>
-      </div>
-
-    </div>
-    <div class="card">
-      <div class="card-preview__bg">
-        <img class="card-preview" src="assets\images\images\opponent.jpg">
-      </div>
-      <div class="card-description">
-
-        <p class="card-description__about">Дизайн мобильных приложений, мобильный ада...</p>
-        <div class="card-description__bottom">
-          <div class="card-description__level">5</div>
-          <div class="card-description__comments"><a>(320 отзывов)</a></div>
-        </div>
-
-      </div>
-      <div class="card-bottom">
-        <div class="card-bottom__like"></div>
-        <div class="card-bottom__price">
-          от
-          <span>30 000</span>
-        </div>
-      </div>
-
-    </div>
-    <div class="card">
-      <div class="card-preview__bg">
-        <img class="card-preview" src="assets\images\images\opponent.jpg">
-      </div>
-      <div class="card-description">
-
-        <p class="card-description__about">Дизайн мобильных приложений, мобильный ада...</p>
-        <div class="card-description__bottom">
-          <div class="card-description__level">5</div>
-          <div class="card-description__comments"><a>(320 отзывов)</a></div>
-        </div>
-
-      </div>
-      <div class="card-bottom">
-        <div class="card-bottom__like"></div>
-        <div class="card-bottom__price">
-          от
-          <span>30 000</span>
-        </div>
-      </div>
-
-    </div>
-  </div> -->
 </section>
